--- a/style/index.css
+++ b/style/index.css
@@ -59,27 +59,27 @@ header nav .logo{
 }
 
 header nav ul{
+   
     display: flex;
-    gap: 3rem;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
 }
 
 header nav ul li{
     list-style: none;
     display: inline-block;
-
 }
 header nav ul li a{
     text-decoration: none;
-    color: var(--white);
+    color: var(--white) !important;
     font-size: 1.4rem;
     font-weight: 400;
     transition: all 0.5s linear;
     text-transform: uppercase;
 }
 
-header nav ul li a:focus{
-    color: var(--theme-color) !important; 
-}
+
 
 header nav ul li a:hover,header nav ul li a:active{
     color: var(--theme-color);
@@ -136,6 +136,141 @@ header .content a:hover{
     background-color:var(--btn-bg-hover) ;
 }
 
+
+/* -----------dropdown Section--------- */
+
+header nav ul li{
+    padding:3rem 0 ;
+}
+
+header nav .index-res li .about-dropdown{
+    position: absolute;
+    z-index: 999;
+    top: 8.5rem;
+    right: 45rem;
+    width: 190px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.2rem;
+    transition: all 0.1s linear;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    border-top: 4px solid rgb(243, 242, 242);
+    background-color: #222222;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    border-bottom-right-radius: 30px 10px;
+    border-bottom-left-radius: 10px 30px;
+    padding: 2rem !important;
+}
+
+
+
+header nav .index-res li:hover>.about-dropdown{
+   visibility: visible;
+   opacity: 1;
+   pointer-events: auto;
+}
+
+header nav .index-res li .about-dropdown li{
+    width: 100%;
+    text-align: start;
+    margin: 0.5rem 0.5rem;
+    padding: 0 !important;
+
+}
+
+header nav .index-res li .about-dropdown li a{
+    color: rgb(237, 236, 236) !important;
+    text-transform: capitalize !important;
+    transition: all 0.3s linear;
+}
+
+header nav .index-res li .about-dropdown li a:hover{
+    color: white !important;
+    padding-left: 3px;
+}
+
+header nav .index-res li .roadmap-dropdown{
+    position: absolute;
+    z-index: 999;
+    top: 8.5rem;
+    right: 30rem;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.2rem;
+    transition: all 0.1s linear;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    border-top: 4px solid rgb(243, 242, 242);
+    background-color: #222222;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    border-bottom-right-radius: 30px 10px;
+    border-bottom-left-radius: 10px 30px;
+    padding: 2rem !important;
+}
+
+header nav .index-res li:hover>.roadmap-dropdown{
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+header nav .index-res li .roadmap-dropdown li{
+    width: 100%;
+    text-align: start;
+    margin: 0.5rem 0.5rem;
+    padding: 0 !important;
+}
+
+header nav .index-res li .roadmap-dropdown li a{
+    color: rgb(237, 236, 236) !important;
+    text-transform: capitalize !important;
+    transition: all 0.3s linear;
+}
+
+header nav .index-res li .roadmap-dropdown li a:hover{
+    color: white !important;
+   padding-left: 3px;
+}
+
+
+
+/* ----line hover-----  */
+
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+    color: white;
+  }
+  
+  .hover-underline-animation:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+  }
+  
+  .hover-underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
+
+
+  .scrollremove{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
 
 
 
