--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,3 +1,4 @@
+/* ----------------other navbar --------------- */
 .mobile-navbar-btn {
     display: none;
 }
@@ -6,7 +7,7 @@
     display: none;
 }
 
-@media(max-width:1021px) {
+@media(max-width:1096px) {
     .head {
         display: flex;
         gap: 3rem;
@@ -15,13 +16,19 @@
         position: relative;
     }
 
+    .blur{
+        filter: blur(1.5px);
+    }
+
+
+
     .head .navbar {
-        width: 100%;
+        width: 50%;
         height: 100vh;
-        background-color: black;
+        background-color: rgba(0,0,0,.97);
         position: absolute;
         top: 0;
-        left: 0;
+        left: 50%;
         z-index: 999;
         display: flex;
         align-items: flex-start;
@@ -32,17 +39,23 @@
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
+    }
 
+    header nav ul li {
+        padding: 1rem 1rem 1rem 0  !important;
     }
 
     .navbar-lists {
         flex-direction: column;
-        align-items: center;
-
+        align-items: flex-start;
+        width: 70%;
+        padding: 0 !important;
     }
 
     .navbar-lists li a {
-        color: white;
+        color: rgb(194, 193, 193) !important;
+        text-align: start;
+        width: 100%;
     }
 
     .navbar-lists li a:hover {
@@ -65,7 +78,7 @@
         display: block;
         z-index: 999;
         color: black;
-   
+
     }
 
     .active .navbar {
@@ -75,16 +88,16 @@
         pointer-events: auto;
     }
 
-     .navbar ul li{
+    .navbar ul li {
         text-align: center;
         width: 100%;
-        border-bottom: 2px solid white;
- 
-     }
+        border-bottom: 1px solid rgb(75, 74, 74) !important;
 
-     .navbar ul {
+    }
+
+    .navbar ul {
         display: flex;
-        gap: 3rem;
+        gap: 2rem;
     }
 
     .active .mobile-navbar-btn .mobile-nav-icon[name="menu-outline"] {
@@ -93,9 +106,84 @@
 
     .active .mobile-navbar-btn .mobile-nav-icon[name="close-outline"] {
         display: block;
-        color: white;
+        color: white !important;
     }
 
+
+
+    /* -------------dropdown-------------------- */
+
+    header nav ul li {
+        padding: 4rem 0;
+    }
+
+    header nav ul li .about-dropdown {
+        position: relative;
+        z-index: 999;
+        top: 0 !important;
+        right: 0 !important;
+        display: none;
+        background-color: black;
+        border-top: 2px solid white;
+    }
+
+    header nav ul li:hover>.about-dropdown {
+        display: block;
+    }
+
+    header nav ul li .about-dropdown li {
+        width: 100%;
+        text-align: start;
+        margin: 0.5rem 0.5rem;
+        padding: 0 !important;
+        border:none !important;
+        border-radius: none;
+    }
+
+    header nav ul li .about-dropdown li a {
+        color: rgb(203, 202, 202) !important;
+        text-transform: capitalize !important;
+        transition: all 0.3s linear;
+    }
+
+    header nav ul li .about-dropdown li a:hover {
+        color: white !important;
+        padding-left: 3px;
+    }
+
+    header nav ul li .roadmap-dropdown {
+        position: relative;
+        z-index: 999;
+        top: 0 !important;
+        right: 0 !important;
+        display: none;
+        background-color: black;
+        border-top: 2px solid white;
+    }
+
+    header nav ul li:hover>.roadmap-dropdown {
+        display: block;
+    }
+
+    header nav ul li .roadmap-dropdown li {
+        width: 100%;
+        text-align: start;
+        margin: 0.5rem 0.5rem;
+        padding: 0 !important;
+        border:none !important;
+        border-radius: none;
+    }
+
+    header nav ul li .roadmap-dropdown li a {
+        color: rgb(203, 202, 202) !important;
+        text-transform: capitalize !important;
+        transition: all 0.3s linear;
+    }
+
+    header nav ul li .roadmap-dropdown li a:hover {
+        color: white !important;
+        padding-left: 3px;
+    }
 }
 
 
@@ -109,21 +197,24 @@
 .mobile-home-navbar-btn .mobile-home-nav-icon[name="close-outline"] {
     display: none;
 }
-@media(max-width:1021px) {
+
+@media(max-width:1111px) {
 
     .index-res {
         width: 100%;
         height: 100vh;
-        background-color: black;
+        background-color: rgba(0,0,0,.97);
         position: absolute;
         top: 0;
-        left: 0;
+        left: 50%;
         z-index: 999;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items:flex-start;
         justify-content: flex-start;
+        gap: 1rem;
         padding-top: 15rem;
+        padding-left: 8rem;
         transform: translateX(100%);
         transition: all 0.5s linear;
         opacity: 0;
@@ -131,13 +222,49 @@
         pointer-events: none;
     }
 
+    
+    .index-res li {
+        display: flex;
+        flex-direction: column;
+        text-align: start;
+        width: 32%;
+        color: rgb(203, 202, 202) !important;
+        border-bottom: 1px solid rgb(75, 74, 74) ;
+    }
 
+    .index-res li a{
+        color: rgb(194, 193, 193) !important;
+    }
 
+    .index-res li a:hover {
+        color: white !important;
+        font: 900;
+    }
 
-    .mobile-home-navbar-btn{
+    .index-res {
+        display: flex;
+        gap: 2rem;
+    }
+
+    .index-res .about-dropdown{
+        padding: 1rem !important;
+    }
+    
+    .index-res .roadmap-dropdown{
+        padding: 1rem !important;
+    }
+    .index-res .about-dropdown li{
+        margin: 1.5rem !important;
+    }
+
+    .index-res .roadmap-dropdown li{
+        margin: 1.5rem !important;
+    }
+
+    .mobile-home-navbar-btn {
         display: block;
         z-index: 999;
-        color: white;
+        color: white !important;
     }
 
     .mobile-home-nav-icon {
@@ -147,30 +274,14 @@
         cursor: pointer;
     }
 
-
     .active .index-res {
         transform: translateX(0);
         opacity: 1;
         visibility: visible;
         pointer-events: auto;
-      
+
     }
 
-    .index-res  li{
-        text-align: center;
-        width: 40%;
-        border-bottom: 2px solid white;
-     }
-
-     .index-res li a:hover{
-        color: white;
-        font: 900;
-     }
-
-     .index-res {
-        display: flex;
-        gap: 3rem;
-    }
 
     .active .mobile-home-navbar-btn .mobile-home-nav-icon[name="menu-outline"] {
         display: none;
@@ -178,5 +289,51 @@
 
     .active .mobile-home-navbar-btn .mobile-home-nav-icon[name="close-outline"] {
         display: block;
+    }
+}
+
+
+
+
+
+/* -----------dropdown------------ */
+@media (max-width:1450px) {
+    header nav ul li .about-dropdown {
+        right: 66rem;
+    }
+
+    header nav ul li .roadmap-dropdown {
+        right: 50rem;
+    }
+
+    .index-res .about-dropdown{
+        right: 46rem;
+    }
+}
+
+@media (max-width:1323px) {
+
+    header nav ul li .roadmap-dropdown {
+        right: 43rem;
+    }
+}
+
+@media (max-width:1295px) {
+    header nav ul li .about-dropdown {
+        right: 60rem;
+    }
+
+    header nav ul li .roadmap-dropdown {
+        right: 45rem;
+    }
+}
+
+@media (max-width:1199px) {
+    header nav ul li .about-dropdown {
+        right: 55rem;
+    }
+
+    header nav ul li .roadmap-dropdown {
+        right: 35rem;
     }
 }
