--- a/style/responsive.css
+++ b/style/responsive.css
@@ -20,8 +20,6 @@
         filter: blur(1.5px);
     }
 
-
-
     .head .navbar {
         width: 50%;
         height: 100vh;
@@ -108,6 +106,11 @@
         display: block;
         color: white !important;
     }
+
+
+
+
+
 
 
     /* -------------dropdown-------------------- */
@@ -305,9 +308,6 @@
         cursor: pointer;
     }
 
-
-
-
     .active .mobile-home-navbar-btn .mobile-home-nav-icon[name="menu-outline"] {
         display: none;
     }
@@ -316,6 +316,11 @@
         display: block;
     }
 }
+
+
+
+
+
 
 
 /* ---------------------------CONTENT INDEX---------------------- */
@@ -331,10 +336,6 @@
         width: 70%;
     }
 }
-
-
-
-
 
 @media(max-width:590px) {
     .header .content {
@@ -354,33 +355,67 @@
         font-size: 1.1rem;
     }
 
-    .index-res{
+    .index-res {
         left: 30%;
     }
-    .index-res li{
+
+    .index-res li {
         width: 50%;
+    }
+
+    .head .navbar {
+        left: 10%;
+        width: 100%;
     }
 }
 
 @media(max-width:391px) {
-    .index-res{
+    .index-res {
         left: 10%;
     }
 
-    .index-res li{
+    .index-res li {
         width: 50%;
     }
 
+    .head .navbar {
+        left: 10%;
+        width: 100%;
+    }
+
 }
 
-@media(max-width:290px) {
-    .index-res{
+@media(max-width:330px) {
+    .index-res {
         left: 10%;
     }
 
-    .index-res li{
+    .index-res li {
         width: 70%;
     }
+    .head .navbar {
+        left: 0%;
+        width: 100%;
+    }
+    .head .logo {
+         margin-left: 0rem;
+    }
+
+    .header .content {
+        width: 99%;
+        left: 0rem;
+    }
+
+    header .content h1 {
+        font-size: 2.2rem !important;
+    }
+
+    header .content h1 span {
+        font-size: 2.4rem !important;
+    }
+    header .content p {
+        font-size: 1rem !important;
+    }
 
 }
 
@@ -388,41 +423,25 @@
 
 
 
-/* -----------dropdown------------
-@media (max-width:1450px) {
-    header nav ul li .about-dropdown {
-        right: 66rem;
+/* ---------teams section------------------ */
+
+@media(max-width:644px) {
+    .team-row div .team-box .title-header h1 {
+        font-size: 3rem !important;
     }
 
-    header nav ul li .roadmap-dropdown {
-        right: 50rem;
+    .team-row div .team-box .title-header h1 span {
+        font-size: 4rem !important;
+
     }
 
-}
+    .team-row div .team-box .title-header p {
+        font-size: 1rem !important;
 
-@media (max-width:1323px) {
-
-    header nav ul li .roadmap-dropdown {
-        right: 43rem;
-    }
-}
-
-@media (max-width:1295px) {
-    header nav ul li .about-dropdown {
-        right: 60rem;
-    }
-
-    header nav ul li .roadmap-dropdown {
-        right: 45rem;
     }
 }
 
-@media (max-width:1199px) {
-    header nav ul li .about-dropdown {
-        right: 55rem;
-    }
-
-    header nav ul li .roadmap-dropdown {
-        right: 35rem;
-    }
-} */
+.textwidget a:hover {
+    color: white !important;
+    text-decoration: underline;
+}
